[package]
name = "keytokey"
version = "0.1.0"
authors = ["Tyberius Prime <tyberius_prime@coonabibba.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.4.4"
#num_enum = "0.2.1"
num_enum = {path = "../num_enum"}
no-std-compat = {version="0.1.0", features=["alloc", ]}

