[package]
name = "keytokey"
version = "0.2.0"
authors = ["Tyberius Prime <tyberius_prime@coonabibba.de>"]
edition = "2018"

description = "A keyboard firmware library turning event streams of key presses into reports for USB"
repository = "https://github.com/TyberiusPrime/KeyToKey"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.4.4"
num_enum = "0.3.1"
spin="0.5"
#num_enum = {path = "../num_enum"}
no-std-compat = {version="0.1.0", features=["alloc", ]}

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.smallbitvec]
version = "2.4.0"
path = "../smallbitvec"
default-features = false
